--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,7 @@ name: Run Python Script
 
 on:
   schedule:
+    - cron: "00 00 * * *"  # Runs daily at 00:00 UTC (01:00 ora solare - 02:00 ora legale)
     - cron: "00 08 * * *"  # Runs daily at 09:30 UTC (09:00 ora solare - 10:00 ora legale)
     - cron: "00 12 * * *"  # Runs daily at 13:30 UTC (13:00 ora solare - 14:00 ora legale)
     - cron: "00 16 * * *"  # Runs daily at 17:30 UTC (17:00 ora solare - 18:00 ora legale)
