--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,9 @@ name: Rassegna Stampa
 
 on:
   schedule:
-    - cron: "00 * * * *"  # Tries to run every hour, the real hours are in the code below
-  workflow_dispatch: # Allows manual trigger
+    # Pianificato per eseguire frequentemente, in modo che il controllo avvenga dinamicamente
+    - cron: "0 * * * *"  # Esegui ogni ora
+  workflow_dispatch: # Consenti il trigger manuale
 
 jobs:
   check-run:
@@ -20,7 +21,7 @@ jobs:
           if [[ ${TRIGGER} == 'schedule' ]]; then
             # Controlla l'ora locale in Europa/Roma
             CURRENT_HOUR=$(date --date='TZ="Europe/Rome" now' +%H)
-            if [[ ${CURRENT_HOUR} == "01" || ${CURRENT_HOUR} == "09" || ${CURRENT_HOUR} == "13" || ${CURRENT_HOUR} == "19" || ${CURRENT_HOUR} == "20" ]]; then
+            if [[ ${CURRENT_HOUR} == "01" || ${CURRENT_HOUR} == "09" || ${CURRENT_HOUR} == "13" || ${CURRENT_HOUR} == "17" ]]; then
               echo "Esecuzione consentita alle ${CURRENT_HOUR}:00 ora locale in Europa/Roma"
               echo "run=True" >> "$GITHUB_OUTPUT"
             else
